fix issues with visibility and refactored change detection

--- a/src/app/components/fs-menu/fs-menu.component.scss
+++ b/src/app/components/fs-menu/fs-menu.component.scss
@@ -1,3 +1,5 @@
-button[hidden] {
-  display: none;
+::ng-deep {
+  *[hidden] {
+    display: none !important;
+  }
 }
